--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,3 +10,4 @@ Encoding: UTF-8
 LazyData: true
 URL: https://github.com/karoliskoncevicius/kklibrary
 BugReports: https://github.com/karoliskoncevicius/kklibrary/issues
+RoxygenNote: 7.3.2
